@@ -151,6 +151,7 @@ soscheckout=org.apache.tools.ant.taskdefs.optional.sos.SOSCheckout
 soslabel=org.apache.tools.ant.taskdefs.optional.sos.SOSLabel
 echoproperties=org.apache.tools.ant.taskdefs.optional.EchoProperties
 splash=org.apache.tools.ant.taskdefs.optional.splash.SplashTask
+ejbdeploy=org.apache.tools.ant.taskdefs.optional.ejb.EjbDeploy
 
 # deprecated ant tasks (kept for back compatibility)
 starteam=org.apache.tools.ant.taskdefs.optional.scm.AntStarTeamCheckOut
